feat: import SSH hosts from config
